--- a/app/src/main/res/layout/activity_main_second2.xml
+++ b/app/src/main/res/layout/activity_main_second2.xml
@@ -49,7 +49,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
 
-                    <TextView
+                    <Recyclerview
                         android:id="@+id/textView3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
