commit grosse avancée

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@color/cardview_light_background">
+    android:background="@color/logo_background"
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +15,7 @@
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="467dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/logo" />
 
@@ -37,24 +37,24 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="75dp"
                         android:layout_weight="1"
                         android:orientation="horizontal">
 
                         <AutoCompleteTextView
-                            android:id="@+id/autoCompleteTextView2"
+                            android:id="@+id/ui_stationAutoComplete"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="bottom|clip_horizontal|center"
                             android:layout_weight="1"
                             android:dropDownWidth="wrap_content"
                             android:dropDownHeight="wrap_content"
-                            android:text="Saisir Station" />
+                            android:text="Saisir la station" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="83dp"
                         android:layout_weight="1"
                         android:orientation="horizontal">
 
@@ -72,7 +72,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="559dp"
                 android:layout_weight="1">
 
                 <Button
